<resources>
    <string name="app_name">BOLATIX</string>
    <string name="next">Berikutnya</string>
    <string name="skip">Lewati</string>
    <string name="back">Kembali</string>
    <string name="finish">Selesai</string>
    <string name="titleOnboarding">Judul Onboarding\n</string>
    <string name="descriptionOnboarding">Deskripsi Onboarding</string>
    <string name="titleOnboarding1">Jadwal Pertandingan</string>
    <string name="descOnboarding1">Selalu update dengan jadwal tim favoritmu dan jangan lewatkan momen seru!</string>
    <string name="titleOnboarding2">Amankan Tempatmu!</string>
    <string name="descOnboarding2">Pesan tempat duduk terbaik dan rasakan atmosfer pertandingan secara langsung.</string>
    <string name="titleOnboarding3">Ayo Mulai</string>
    <string name="descOnboarding3">Bergabunglah sekarang untuk pengalaman sepak bola yang lebih mendalam dan menyenangkan!</string>
    <string name="titleSignIn">Selamat Datang</string>
    <string name="descSignIn">Masuk ke akunmu untuk melanjutkan perjalanan!</string>
    <string name="image">Gambar</string>
    <string name="hintEmail">Alamat Email</string>
    <string name="hintName">Nama Lengkap</string>
    <string name="hintPassword">Kata Sandi</string>
    <string name="hintConfirmPassword">Konfirmasi Kata Sandi</string>
    <string name="other_provider_signin">atau masuk dengan</string>
    <string name="other_provider_signup">atau daftar dengan</string>
    <string name="textHaveAndAccount">Sudah punya akun?</string>
    <string name="textDontHaveAndAccount">Belum punya akun?</string>
    <string name="signin">Masuk</string>
    <string name="signup">Daftar</string>
    <string name="titleFragment">Judul Fragmen</string>
    <string name="standings">Klasemen</string>
    <string name="ticket">Tiket</string>
    <string name="home">Beranda</string>
    <string name="profile">Profil</string>
    <string name="teamHome">Tim Tuan Rumah</string>
    <string name="teamAway">Tim Tamu</string>
    <string name="dataMatch">Tanggal Pertandingan</string>
    <string name="timeMatch">Waktu Pertandingan</string>
    <string name="stadion">Stadion</string>
    <string name="buyTicket">Beli Tiket</string>
    <string name="messageInputError">Pesan Kesalahan Input</string>
    <string name="textEmailCantEmpty">Email tidak boleh kosong</string>
    <string name="textPasswordCantEmpty">Kata sandi tidak boleh kosong</string>
    <string name="tab_text_1">Beranda</string>
    <string name="tab_text_2">Profil</string>
    <string name="tab_text_3">Pengaturan</string>
    <string name="forgot_password">Lupa Kata Sandi?</string>
    <string name="teamName">Nama Tim</string>
    <string name="titleAlerPermission">Izin Diperlukan</string>
    <string name="messageAlertPermission">Aplikasi memerlukan izin untuk melanjutkan. Harap beri izin yang diminta!</string>
    <string name="tryAgain">Coba Lagi</string>
    <string name="goToSetting">Pergi ke Pengaturan</string>
    <string name="cancel">Batal</string>
    <string name="titleFavorite">Pilih Tim Favorit Anda</string>
    <string name="addToFavorite">Tambahkan ke favorit</string>
    <string name="tabs">Tab</string>
    <string name="txtCekInbox"><b>Kami telah mengirimkan tautan untuk login ke BOLATIX ke email Anda, harap periksa kotak masuk email Anda.</b></string>
    <string name="mendatang">Mendatang</string>
    <string name="dibeli">Dibeli</string>
    <string name="vs">%1$s vs %2$s</string>
    <string name="detail_tiket">Detail Tiket</string>
    <string name="strip">%1$s - %2$s</string>
    <string name="data_tiket_tidak_ditemukan">Data tiket tidak ditemukan</string>
    <string name="pilih_tempat_duduk_terlebih_dahulu">Pilih tempat duduk terlebih dahulu</string>
    <string name="berakhir_pada">Berakhir pada %1$s</string>
    <string name="pengaturan_akun">Pengaturan Akun</string>
    <string name="informasi_pribadi">Informasi Pribadi</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="lainnya">Lainnya</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>
    <string name="faq">FAQ</string>
    <string name="keluar">Keluar</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="ubah_nama">Ubah Nama</string>
    <string name="batal">Batal</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="ubah_no_telepon">Ubah No Telepon</string>
    <string name="ubah">UBAH</string>
    <string name="no_telepon">No Telepon</string>
    <string name="messageNotifPaymentSuccess">Pembelian tiket untuk event <b>%1$s VS %2$s</b> berhasil.</string>
    <string name="deskripsi_aboutus">Bolatix adalah aplikasi terdepan untuk semua penggemar sepak bola di Indonesia! Menyediakan berita terkini, jadwal pertandingan, serta kemudahan dalam membeli tiket Liga Indonesia (LIGA 1). Dengan Bolatix, Anda dapat mengikuti perkembangan liga favorit Anda, mulai dari informasi tim, skor pertandingan, hingga memesan tiket pertandingan langsung dengan beberapa klik saja. Kami hadir untuk memberikan pengalaman sepak bola terbaik bagi para penggemar Liga Indonesia!</string>
    <string name="deskripsi_aboutus2">Misi kami adalah untuk menyatukan penggemar sepak bola Indonesia dalam satu platform, di mana mereka dapat dengan mudah mendapatkan informasi terbaru seputar pertandingan dan memesan tiket dengan mudah, aman, dan cepat.</string>
    <string name="fitur_utama_bolatix">Fitur Utama Bolatix:</string>
    <string name="deskripsi_aboutus_fitur">• Pertandingan Terbaru\n• Jadwal Pertandingan\n• Pembelian Tiket\n• Notifikasi</string>
    <string name="misi_bolatix">Misi Bolatix:</string>
    <string name="title_faq">Selamat datang di FAQ Bolatix!</string>
    <string name="desc_faq1">Kami memahami bahwa Anda mungkin memiliki beberapa pertanyaan tentang cara menggunakan aplikasi Bolatix. Di sini, Anda akan menemukan informasi yang akan membantu Anda menavigasi berbagai fitur yang tersedia, mulai dari jadwal pertandingan hingga pembelian tiket dan klasemen Liga 1 Indonesia.</string>
    <string name="faq_title_1">Apa itu Bolatix?</string>
    <string name="faq_desc_1">Bolatix adalah aplikasi yang menyediakan informasi terkini seputar Liga 1 Indonesia, termasuk jadwal pertandingan, penjualan tiket, dan klasemen terbaru.</string>
    <string name="faq_title_2">Bagaimana cara membeli tiket di Bolatix?</string>
    <string name="faq_desc_2">Untuk membeli tiket, Anda bisa memilih pertandingan yang diinginkan, kemudian memilih kursi dan metode pembayaran yang tersedia. Tiket akan langsung dikirim ke email atau aplikasi Anda setelah pembayaran berhasil.</string>
    <string name="faq_title_3">Di mana saya bisa melihat jadwal pertandingan Liga 1?</string>
    <string name="faq_desc_3">Anda dapat menemukan jadwal pertandingan Liga 1 di menu "Jadwal" di aplikasi Bolatix. Kami selalu memperbarui jadwal pertandingan secara real-time.</string>
    <string name="faq_title_4">Apakah ada informasi tentang hasil pertandingan?</string>
    <string name="faq_desc_4">Ya, Bolatix menyediakan informasi tentang hasil pertandingan yang telah berlangsung, termasuk skor akhir dan statistik pertandingan.</string>
    <string name="faq_title_5">Bagaimana cara melihat klasemen Liga 1?</string>
    <string name="faq_desc_5">Klasemen Liga 1 dapat diakses melalui menu "Standings" di aplikasi. Di sini Anda bisa melihat posisi tim, jumlah poin, serta statistik lainnya.</string>
    <string name="faq_title_6">Apakah Bolatix menyediakan informasi tentang pemain?</string>
    <string name="faq_desc_6">Saat ini, kami fokus pada informasi mengenai tim dan pertandingan, namun kami akan mempertimbangkan untuk menambah fitur terkait pemain di pembaruan mendatang.</string>
    <string name="faq_title_7">Apakah tiket yang dibeli bisa dibatalkan?</string>
    <string name="faq_desc_7">Pembelian tiket tidak dapat dibatalkan setelah transaksi selesai. Pastikan untuk memeriksa tanggal dan waktu pertandingan sebelum membeli tiket.</string>
    <string name="faq_title_8">Bagaimana cara mendapatkan notifikasi tentang pertandingan?</string>
    <string name="faq_desc_8">Anda bisa mengaktifkan notifikasi di pengaturan aplikasi Bolatix untuk menerima informasi tentang pertandingan mendatang, hasil pertandingan, dan promosi tiket.</string>
    <string name="faq_title_9">Apakah Bolatix tersedia di luar Indonesia?</string>
    <string name="faq_desc_9">Saat ini, Bolatix hanya tersedia untuk pertandingan Liga 1 Indonesia, namun kami sedang mempertimbangkan untuk memperluas cakupan ke liga-liga lain di masa depan.</string>
    <string name="faq_title_10">Bagaimana cara menghubungi customer support Bolatix?</string>
    <string name="faq_desc_10">Jika Anda memiliki pertanyaan atau masalah, Anda dapat menghubungi kami melalui fitur "Bantuan" di aplikasi atau mengirim email ke <b>support@bolatix.com.</b>.</string>
    <string name="tanggal">Tanggal</string>
    <string name="tx_information_profile">Jagalah akun Anda dengan baik untuk melindungi informasi pribadi dan data Anda. Hindari berbagi kata sandi dengan orang lain, gunakan kombinasi kata sandi yang kuat.</string>
    <string name="text_pap_1">Selamat datang di aplikasi Bolatix! Privasi Anda sangat penting bagi kami. Kebijakan Privasi ini menjelaskan bagaimana kami mengumpulkan, menggunakan, melindungi, dan membagikan informasi Anda saat menggunakan aplikasi Bolatix.</string>
    <string name="text_pap_2">Dengan menggunakan aplikasi kami, Anda setuju untuk mematuhi dan terikat oleh Kebijakan Privasi ini. Jika Anda tidak setuju, harap jangan menggunakan aplikasi kami.</string>
    <string name="tidak_ada_riwayat_pembelian">Tidak ada riwayat pembelian.</string>
    <string name="waktu">Waktu</string>
    <string name="pindai_barcode_ini_di_titik_masuk">Pindai BARCODE ini di titik masuk!</string>
    <string name="jaga_keamanan_barcode_anda">*) Jaga keamanan BARCODE Anda</string>
    <string name="unduh_pdf">UNDUH PDF</string>
    <string name="bagikan">BAGIKAN</string>
    <string name="kembali">KEMBALI</string>
    <string name="gate">Gate</string>
    <string name="apakah_anda_yakin_ingin_keluar">Apakah anda yakin ingin keluar?</string>
    <string name="tipe">Tipe</string>
    <string name="lupa_sandi">Lupa Sandi</string>
    <string name="detail_pesanan_selesai">Detail Pesanan Selesai</string>
    <string name="text_pap"><![CDATA[Kebijakan  & Privasi]]></string>
</resources>