<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.activities.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/av_bold"
                android:text="@string/titleSignIn"
                android:textColor="@color/colorButtonBlue"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/av_medium"
                android:text="@string/descSignIn"
                android:textColor="@color/neutral_light80"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutInputEmail"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_input_email">

            <com.example.bolatix.ui.components.CustomInput
                android:id="@+id/inputEmail"
                style="@style/CustomInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintEmail"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="15sp"
                tools:ignore="SpeakableTextPresentCheck,VisualLintTextFieldSize,TextContrastCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/messageErrorEmail"
                style="@style/ErrorTextStyle"
                android:text="@string/messageInputError" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPassword"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_lock">

            <com.example.bolatix.ui.components.CustomInput
                android:id="@+id/inputPassword"
                style="@style/CustomInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintPassword"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="SpeakableTextPresentCheck,VisualLintTextFieldSize,TextContrastCheck" />

            <TextView
                android:id="@+id/messageErrorPassword"
                style="@style/ErrorTextStyle"
                android:text="@string/messageInputError" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btnForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginVertical="15dp"
            android:text="@string/forgot_password"
            android:textColor="@color/neutral_light80"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:background="@drawable/rounded_button_blue"
            android:fontFamily="@font/av_bold"
            android:text="@string/signin"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16.0dip"
            tools:ignore="SpUsage,TextSizeCheck,TouchTargetSizeCheck,VisualLintButtonSize" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textDontHaveAndAccount"
                android:textColor="@color/neutral_light80"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/btnToSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/signup"
                android:textColor="@color/colorButtonBlue"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>