<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".ui.activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:paddingHorizontal="16dp"
        android:orientation="vertical"
        android:gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleOnboarding3"
                android:textStyle="bold"
                android:textSize="25sp"
                android:fontFamily="@font/av_bold"
                android:textColor="@color/colorButtonBlue"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/descSignIn"
                android:textSize="15sp"
                android:fontFamily="@font/av_medium"
                android:textColor="@color/neutral_light80"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layEtEmail"
            android:layout_marginTop="15dp"
            style="@style/CustomTextInputLayout"
            app:startIconDrawable="@drawable/ic_input_email"
            app:endIconMode="clear_text">

            <com.example.bolatix.ui.components.CustomInput
                android:id="@+id/etEmail"
                style="@style/CustomInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintEmail"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/messErrEmail"
                style="@style/ErrorTextStyle"
                android:text="@string/messageInputError" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layEtName"
            android:layout_marginTop="10dp"
            style="@style/CustomTextInputLayout"
            app:startIconDrawable="@drawable/ic_input_name"
            app:endIconMode="clear_text">

            <com.example.bolatix.ui.components.CustomInput
                android:id="@+id/etName"
                style="@style/CustomInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintName"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/messErrName"
                style="@style/ErrorTextStyle"
                android:text="@string/messageInputError" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layEtPassword"
            android:layout_marginTop="10dp"
            style="@style/CustomTextInputLayout"
            app:startIconDrawable="@drawable/ic_input_password"
            app:endIconDrawable="@drawable/ic_visibility_on"
            app:endIconMode="password_toggle">

            <com.example.bolatix.ui.components.CustomInput
                android:id="@+id/etPassword"
                style="@style/CustomInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintPassword"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="SpeakableTextPresentCheck,VisualLintTextFieldSize" />

            <TextView
                android:id="@+id/messErrPassword"
                style="@style/ErrorTextStyle"
                android:text="@string/messageInputError" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layEtConPassword"
            android:layout_marginTop="10dp"
            style="@style/CustomTextInputLayout"
            app:startIconDrawable="@drawable/ic_input_cpassword"
            app:endIconDrawable="@drawable/ic_visibility_on"
            app:endIconMode="password_toggle">

            <com.example.bolatix.ui.components.CustomInput
                android:id="@+id/etConPassword"
                style="@style/CustomInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:minHeight="48dp"
                android:hint="@string/hintConfirmPassword"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/messErrConPassword"
                style="@style/ErrorTextStyle"
                android:text="@string/messageInputError" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button_blue"
            android:fontFamily="@font/av_bold"
            android:text="Daftar"
            android:textAllCaps="false"
            tools:ignore="TouchTargetSizeCheck,VisualLintButtonSize"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textHaveAndAccount"
                android:textColor="@color/neutral_light80"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/btnToSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:textColor="@color/colorButtonBlue"
                android:layout_marginStart="8dp"
                android:textStyle="bold"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>