<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/AppThemeBlueBar"
    android:orientation="vertical"
    android:background="@drawable/bg_bottom_sheet"
    android:padding="16dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/batal"
            android:textStyle="bold"
            android:layout_gravity="start|center_vertical"
            android:textSize="16sp"
            android:textColor="@color/colorButtonBlue"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ubah_nama"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"/>
    </FrameLayout>

    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutInputEmail"
            android:layout_marginTop="10dp"
            style="@style/TextInputLayoutRangeRevamp"
            app:startIconDrawable="@drawable/ic_personal"
            app:startIconTint="@color/colorButtonBlue"
            app:endIconTint="@color/error"
            app:endIconMode="clear_text">

            <com.example.bolatix.ui.components.CustomInput
                android:id="@+id/input"
                style="@style/CustomInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nama_lengkap"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:ignore="SpeakableTextPresentCheck,VisualLintTextFieldSize,TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnChange"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button_blue"
            android:fontFamily="@font/av_bold"
            android:text="@string/ubah"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16.0dip"
            tools:ignore="SpUsage,TextSizeCheck,TouchTargetSizeCheck,VisualLintButtonSize" />
    </LinearLayout>
</LinearLayout>
